--- a/index.html
+++ b/index.html
@@ -33,4 +33,5 @@
 <script src="/game.js"></script>
 <script src="/interface.js"></script>
 </body>
+<p>Desenvolvido por Emerson Pinheiro</p>
 </html>
